--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrontEnd Developer</title>
-    <link href="style.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="respon.css">
+    <link href="assets/styles/style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/styles/respon.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
@@ -49,7 +49,7 @@
                 <div class="wrapper-lesson">
                     <div class="lesson">
                         <div class="des-content">                        
-                            <img src="front.jpg" class="icons">
+                            <img src="assets/image/front.jpg" class="icons">
                         </div>
                         <span>Front-End</span>
                         <p>Front-End adalah sebuah bagian dari website yang menyuguhkan tampilan kepada user. Bagian ini dibangun menggunakan HTTP (HyperText Markup Language), CSS (Cascading Style Sheets), dan JavaScript sehingga sebuah URL bisa berfungsi dan menampilkan website yang baik.</p>
@@ -58,7 +58,7 @@
                 <div class="wrapper-lesson">
                     <div class="lesson">
                         <div class="des-content">                        
-                            <img src="dev.jpg" class="icons">
+                            <img src="assets/image/dev.jpg" class="icons">
                         </div>
                         <span>Back-End</span>
                         <p>Di balik sebuah website yang bagus, ada program Back-End yang menopang semua fitur agar berjalan dengan semestinya. Jika Front-End fokus pada tampilan website, maka Back-End fokus pada fungsionalitas.</p>
@@ -67,7 +67,7 @@
                 <div class="wrapper-lesson">
                     <div class="lesson">
                         <div class="des-content">                        
-                            <img src="back.jpg" class="icons">
+                            <img src="assets/image/back.jpg" class="icons">
                         </div>
                         <span>Dev-Ops</span>
                         <p>DevOps adalah serangkaian pekerjaan yang mengotomasisasi proses antara Software Development dan Development Team agar mereka dapat melakukan proses build, test dan release perangkat lunak lebih cepat dan lebih handal. DevOps yang sudah berjalan dengan baik akan menghasilkan produk yang stabil dan meningkatkan nilai dari produk itu sendiri.</p>
@@ -87,7 +87,7 @@
             </div>
             <div class="circles">
                 <div class="wrapper">
-                    <img src="me.jpg" class="circle">
+                    <img src="assets/image/me.jpg" class="circle">
                     <div class="name-group">
                         <p>Farid Ali</p>
                         <p>Bekasi</p>                        
@@ -95,7 +95,7 @@
                     <a href="#" class="button">Lihat Profile</a>
                 </div>
                 <div class="wrapper">
-                    <img src="rahmat.jpg" class="circle">
+                    <img src="assets/image/rahmat.jpg" class="circle">
                     <div class="name-group">
                         <p>Rahmat Alamsyah</p>
                         <p>Purwakarta</p>
@@ -107,35 +107,37 @@
     </div>
     <!-- bot content end -->
     <footer>
-        <div class="footer-logo">
-            <p><span><</span><span>/</span><span>></span>LearnCODING</p>
-        </div>
-        <div class="footer-list">
-            <div class="list">
-                <h4>LAYANAN</h4>
-                <ul>
-                    <li>Pelajaran</li>
-                    <li>Paket</li>
-                    <li>Kisah Sukses</li>
-                </ul>
+        <div class="container">
+            <div class="footer-logo">
+                <p><span><</span><span>/</span><span>></span>LearnCODING</p>
             </div>
-            <div class="list">
-                <h4>DUKUNGAN</h4>
-                <ul>
-                    <li>Tentang Kami</li>
-                    <li>Ketentuan</li>
-                    <li>Kebijakan Privasi</li>
-                </ul>
-            </div>   
-            <div class="list">
-                <h4>IKUTI KAMI DI</h4>
-                <ul>
-                    <li>Instagram</li>
-                    <li>Twitter</li>
-                    <li>Facebook</li>
-                </ul>
-            </div>                                 
-        </div>
+            <div class="footer-list">
+                <div class="list">
+                    <h4>LAYANAN</h4>
+                    <ul>
+                        <li>Pelajaran</li>
+                        <li>Paket</li>
+                        <li>Kisah Sukses</li>
+                    </ul>
+                </div>
+                <div class="list">
+                    <h4>DUKUNGAN</h4>
+                    <ul>
+                        <li>Tentang Kami</li>
+                        <li>Ketentuan</li>
+                        <li>Kebijakan Privasi</li>
+                    </ul>
+                </div>   
+                <div class="list">
+                    <h4>IKUTI KAMI DI</h4>
+                    <ul>
+                        <li>Instagram</li>
+                        <li>Twitter</li>
+                        <li>Facebook</li>
+                    </ul>
+                </div>                                 
+            </div>
+        </div>        
     </footer>
 </body>
 </html>
